# tunnel

./: .gitignore  CMakeLists.txt  README.md  run.xml.sample  tunnel
android/java/: AndroidManifest.xml  build.xml  project.properties
android/lib/src/: CMakeLists.txt  game.hpp  main.hpp  make.sh
build-scripts/: android-build.sh  create-source-archive.sh  version.sh  windows-build.sh  wine-make.sh
data/: CMakeLists.txt
data/animation/: stars.canim
data/animation/common/: spring.anim  spring.canim
data/animation/player/: cling.canim  clung_jump.anim  fall.canim  in-equilibrium.anim  in-equilibrium.canim  injured.canim  jump.anim  push.anim  pushed-up.canim  roar.anim  run.anim  slap_and_walk.anim  start_cling.anim  start_cling.canim  swimming.anim  wait2.canim  walk.anim  walk.canim
data/animation/plee/: cling.canim  clung_jump.canim  crouch.canim  fall.anim  fall.canim  float.canim  hang.canim  idle.canim  in-equilibrium.canim  injured.anim  injured.canim  jump.anim  jump.canim  look_upward.anim  push.canim  pushed-up.anim  roar.canim  run.canim  sink.anim  sink.canim  slap.canim  slap_and_walk.canim  start_cling.canim  swimming.canim  teleport.anim  teleport.canim  vertical_jump.canim  wait1.anim  wait1.canim  wait2.anim  wait2.canim  walk.canim
data/en/: intro.txt
data/gfx/common/: block.xcf.bz2  common-1.spritedesc  common-1.spritepos  crystal.xcf.bz2  door.xcf.bz2  exit.xcf.bz2  platform.xcf.bz2  spikes.xcf.bz2  spring.xcf.bz2  switch.xcf.bz2
data/gfx/effect/: screen.spritedesc  screen.spritepos  screen.xcf.bz2
data/gfx/hero/: hero-1.spritepos  (+2 more)
data/level/: end.cl  end.lvl  intro.cl  intro.lvl  level_1.cl  level_1.lvl  level_2.cl  level_2.lvl  level_3.cl  level_3.lvl  placeholder.cl  placeholder.lvl  start.cl  start.lvl  test.lvl  test_couches.cl  test_couches.lvl  title.cl  title.lvl
data/model/: door.cm  door.mdl  door_switch.cm  door_switch.mdl  seed.cm  seed.mdl
data/music/: level.mid  level.tg  title.mid  title.tg
data/script/: title.txt
data/shader/: player_in_tunnel.frag  tunnel_common.frag  tunnel_inside_effect.frag  tunnel_origin.frag  tunnel_shader.frag  tunnel_target.frag
data/sound/: AUTHORS
desktop/: CMakeLists.txt
desktop/applications/: tunnel.desktop  tunnel.desktop.in
desktop/locale/: CMakeLists.txt
desktop/locale/tunnel/: CMakeLists.txt  extract-strings.sh  fr.mo  fr.po  tunnel.pot
desktop/logo/: logo.xcf.bz2
desktop/man/: CMakeLists.txt  tunnel.sgml
desktop/menu/: tunnel  tunnel.in
desktop/pixmaps/: tunnel.xpm
launcher/src/: CMakeLists.txt  launcher.hpp
launcher/src/code/: launcher.cpp  main.cpp
lib/item-description/: add_ingame_layers.xml  block.xml  clingable.xml  crystal.xml  door.xml  door_switch.xml  layer_border.xml  level_exit.xml  level_settings.xml  passive_enemy.xml  player.xml  player_killer.xml  shared_camera.xml  spring.xml
lib/src/: CMakeLists.txt
lib/src/tunnel/: CMakeLists.txt  add_ingame_layers.hpp  block.hpp  camera_on_player.hpp  clingable.hpp  controller_config.hpp  controller_layout.hpp  controller_map.hpp  crystal.hpp  defines.hpp  door.hpp  door_switch.hpp  game_variables.hpp  gui_command.hpp  init.hpp  item_picking_filter.hpp  layer_border.hpp  level_exit.hpp  level_settings.hpp  passive_enemy.hpp  player.hpp  player_action.hpp  player_killer.hpp  player_pending_action.hpp  player_proxy.hpp  player_stop_block.hpp  seed.hpp  spring.hpp  tunnel_gettext.hpp  version.hpp
lib/src/tunnel/code/: add_ingame_layers.cpp  block.cpp  camera_on_player.cpp  clingable.cpp  controller_config.cpp  controller_layout.cpp  crystal.cpp  door.cpp  door_switch.cpp  game_variables.cpp  gui_command.cpp  init.cpp  item_picking_filter.cpp  layer_border.cpp  level_exit.cpp  level_settings.cpp  passive_enemy.cpp  player.cpp  player_action.cpp  player_killer.cpp  player_pending_action.cpp  player_proxy.cpp  player_stop_block.cpp  seed.cpp  spring.cpp
lib/src/tunnel/impl/: controller_map.tpp
lib/src/tunnel/item_brick/: item_with_player_action_reader.hpp  item_with_single_player_action_reader.hpp  transportable.hpp
lib/src/tunnel/item_brick/impl/: item_with_player_action_reader.tpp  item_with_single_player_action_reader.tpp
lib/src/tunnel/layer/: misc_layer.hpp  status_layer.hpp
lib/src/tunnel/layer/code/: misc_layer.cpp  status_layer.cpp
lib/src/tunnel/layer/status/: crystal_component.hpp  energy_component.hpp  status_component.hpp
lib/src/tunnel/layer/status/code/: crystal_component.cpp  energy_component.cpp  status_component.cpp
lib/src/tunnel/message/: get_player_instance.hpp
lib/src/tunnel/message/code/: get_player_instance.cpp
lib/src/tunnel/network/message/: player_action_message.hpp
lib/src/tunnel/network/message/code/: player_action_message.cpp
lib/src/tunnel/player_state/: state_captive.hpp  state_cling.hpp  state_clung_jump.hpp  state_crouch.hpp  state_dead.hpp  state_fall.hpp  state_float.hpp  state_game_over.hpp  state_hang.hpp  state_idle.hpp  state_injured.hpp  state_jump.hpp  state_look_upward.hpp  state_paralyze.hpp  state_player.hpp  state_roar.hpp  state_run.hpp  state_sink.hpp  state_slap.hpp  state_start_cling.hpp  state_start_hang.hpp  state_start_jump.hpp  state_swimming.hpp  state_teleport.hpp  state_vertical_jump.hpp  state_wait.hpp  state_walk.hpp
lib/src/tunnel/player_state/code/: state_captive.cpp  state_cling.cpp  state_clung_jump.cpp  state_crouch.cpp  state_dead.cpp  state_fall.cpp  state_float.cpp  state_game_over.cpp  state_hang.cpp  state_idle.cpp  state_injured.cpp  state_jump.cpp  state_look_upward.cpp  state_paralyze.cpp  state_player.cpp  state_roar.cpp  state_run.cpp  state_sink.cpp  state_slap.cpp  state_start_cling.cpp  state_start_hang.cpp  state_start_jump.cpp  state_swimming.cpp  state_teleport.cpp  state_vertical_jump.cpp  state_wait.cpp  state_walk.cpp
lib/src/tunnel/util/: layer_util.hpp  player_util.hpp  util.hpp
lib/src/tunnel/util/code/: layer_util.cpp  player_util.cpp  util.cpp
release/: CMakeLists.txt  ReadMe.txt
release/installer-files/: tunnel.nsi
src/tunnel/: player.hpp
tools/: create-corner-slope.sh  create-slope.sh
(+70 files in other folders)
